IntershipFirstProject/force-app/main/default/objects/Catalog_Order__c/Catalog_Order__c.object-meta.xml
<CustomObject>
    <description>A Catalog Order for use with the Catalog mobile app.</description>
    <label>Catalog Order</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Catalog Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>