IntershipFirstProject/force-app/main/default/objects/Catalog_Order__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <description>Counts the items in the line items.</description>
    <label># Items</label>
    <summarizedField>Catalog_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>