IntershipFirstProject/force-app/main/default/objects/Catalog_Order__c/fields/Lines__c.field-meta.xml
<CustomField>
    <fullName>Lines__c</fullName>
    <description>Counts the number of discrete line items.</description>
    <label># Lines</label>
    <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>