IntershipFirstProject/force-app/main/default/objects/Catalog_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Sums the Subtotals from the line items.</description>
    <label>Total Cost</label>
    <summarizedField>Catalog_Line_Item__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Catalog_Line_Item__c.Catalog_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>