IntershipFirstProject/force-app/main/default/objects/Catalog_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Items__c</columns>
    <columns>Lines__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>